<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PVRMonitor</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About us</string>

    <string-array name="overlay_position_list">
        <item>left</item>
        <item>right</item>
    </string-array>

    <string name="back_button_warning">Press \"Back\" again to terminate the PVRMonitor. Press \"Home\" to keep it alive.</string>

    <string name="display_options">Display Options</string>
    <string name="show_overlay">Show overlay</string>
    <string name="top_left">Top left</string>
    <string name="top_right">Top right</string>
    <string name="free_move">Free move</string>
    <string name="opacity">Opacity</string>
    <string name="cpu_each">Show all CPU cores</string>
    <string name="cpu_smooth">Average the CPU load (1s)</string>
    <string name="gpu_smooth">Average the GPU load (1s)</string>

    <string name="add_value">Add value</string>
    <string name="enabled_values">Hardware Values</string>
    <string name="load_cpu">CPU: </string>
    <string name="load_3d">Renderer Active (%): </string>
    <string name="load_ta">Tiler Active (%): </string>
    <string name="load_pixel">Pixel Load (%): </string>
    <string name="load_vertex">Vertex Load (%): </string>
    <string name="load_fps">Frames per second: </string>

    <string-array name="CPU_array">
        <item>All Cores</item>
    </string-array>

    <string-array name="load_array">
        <item>Text</item>
        <item>Graph</item>
    </string-array>

    <string name="extended_values">Advanced Hardware Values</string>

    <string name="about_img_title">Imagination Technologies</string>
    <string name="about_img_text">Imagination Technologies Ltd.\nhttp://www.imgtec.com/</string>

    <string name="about_pvr_title">PowerVR Insider</string>
    <string name="about_pvr_text">PowerVR Insider is our developer support program, which grants you access to our forums, graphics SDKs, and utilities.</string>

    <string name="about_support_title">Support:</string>
    <string name="about_support_text"><a href="https://pvrsupport.imgtec.com/">PowerVR Support</a></string>

    <string name="about_forum_title">PowerVR Insider Forum:</string>
    <string name="about_forum_text"><a href="http://forum.imgtec.com/categories/powervr-graphics/">PowerVR Insider Forum</a></string>

    <string name="about_counters_title">All Counter Descriptions:</string>
    <string name="about_counters"><a href="http://cdn.imgtec.com/sdk-documentation/PVRTune.Counter%20List%20and%20Description.pdf">Download (.PDF)</a></string>

</resources>
