<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/dialog_background">

    <View
        android:layout_width="0dp"
        android:layout_height="75dp"/>

    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/about_support_title"
       android:textStyle="bold"
       android:textColor="@color/white"
        android:textSize="14sp"
       android:textAppearance="?android:attr/textAppearanceLarge"/>
	               
    <TextView 
        android:id="@+id/about_us_support"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_support_text"
        android:textColorLink="@color/white"
        android:textSize="11sp"
        android:textIsSelectable="true"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/about_forum_title"
       android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="14sp"
       android:paddingTop="8dp"
       android:textAppearance="?android:attr/textAppearanceLarge"/>
    
    <TextView 
        android:id="@+id/about_us_forum"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_forum_text"
        android:textSize="11sp"
        android:textColorLink="@color/white"
        android:textIsSelectable="true"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_counters_title"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:paddingTop="8dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/about_counters"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_counters"
        android:textColorLink="@color/white"
        android:textSize="11sp"
        android:textIsSelectable="true"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

</LinearLayout>
